--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mitochron_express",
   "version": "1.0.0",
-  "description": "",
+  "description": "Mitochron Junior Level Backend Assessment...",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
