--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Ayooluwa Adeleke",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose": "^5.10.5",
     "dotenv": "^16.1.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
